fix spacing on desktop

--- a/src/components/allAccessPass/AllAccessPass.module.css
+++ b/src/components/allAccessPass/AllAccessPass.module.css
@@ -11,7 +11,7 @@
   justify-content: space-between;
   overflow: hidden;
   margin-bottom: 0;
-  margin-top: 4rem;
+  margin-top: 5rem;
 }
 .heading-and-cta {
   display: flex;
