--- a/src/components/weAreSpeakingLouderSection/WeAreSpeakingLouderMain.module.css
+++ b/src/components/weAreSpeakingLouderSection/WeAreSpeakingLouderMain.module.css
@@ -49,6 +49,7 @@
     #fff,
     #076585
   ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  margin-top: 4rem;
 }
 
 .marqueeAnim {
@@ -100,6 +101,9 @@
   }
   .note {
     margin-top: 1rem;
+  }
+  .marqueeAnimContainer{
+    margin-top: 0;
   }
 }
 
